Sep 6 updates fxID